--- a/src/app/view/Login.fxml
+++ b/src/app/view/Login.fxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXButton?>
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.DropShadow?>
@@ -14,7 +14,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="665.0" prefWidth="975.0" style="-fx-background-color: transparent;" stylesheets="@../style.css" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.controller.LoginController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="685.0" prefWidth="995.0" style="-fx-background-color: transparent;" stylesheets="@../style.css" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.controller.LoginController">
     <children>
       <Text fx:id="userfname" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-fill: White;" />
         <StackPane onMouseDragged="#dragged" onMousePressed="#pressed" prefHeight="150.0" prefWidth="200.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
@@ -105,26 +105,25 @@
                                         <Insets top="30.0" />
                                     </VBox.margin>
                                 </HBox>
-                                <Button fx:id="login" mnemonicParsing="false" onMouseClicked="#login" prefWidth="180.0" style="-fx-background-color: #f1c40f; -fx-background-radius: 100PX; -fx-text-fill: black; -fx-font-weight: Bold;" text="Login">
-                                    <VBox.margin>
-                                        <Insets top="30.0" />
-                                    </VBox.margin>
-                                </Button>
-                                <HBox alignment="BOTTOM_CENTER" prefHeight="111.0" prefWidth="811.0" VBox.vgrow="ALWAYS">
+                        <JFXButton mnemonicParsing="false" onMouseClicked="#login" prefWidth="180.0" ripplerFill="#ff3d4d" style="-fx-background-color: #f1c40f; -fx-background-radius: 100px; -fx-font-weight: Bold; -fx-text-fill: Black;" text="Login">
+                           <VBox.margin>
+                              <Insets bottom="5.0" top="25.0" />
+                           </VBox.margin></JFXButton>
+                                <HBox alignment="BOTTOM_CENTER" prefHeight="101.0" prefWidth="811.0" VBox.vgrow="ALWAYS">
                                     <padding>
                                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                     </padding>
                                     <children>
-                                        <Text strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-weight: bold; -fx-font-family: Quicksand;" text="Need an account">
-                                            <HBox.margin>
-                                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                                            </HBox.margin>
-                                        </Text>
-                                        <Text onMouseClicked="#signup" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-weight: bold; -fx-font-family: Quicksand; -fx-fill: #ff3b49;" text="Signup">
-                                            <HBox.margin>
-                                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                                            </HBox.margin>
-                                        </Text>
+                              <VBox alignment="CENTER" prefHeight="83.0" prefWidth="300.0">
+                                 <children>
+                                              <Text onMouseClicked="#signup" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-weight: bold; -fx-font-family: Quicksand; -fx-fill: #ff3b49; -fx-font-size: 14;" text="Signup" />
+                                    <VBox alignment="CENTER" prefHeight="43.0" prefWidth="300.0">
+                                       <children>
+                                          <JFXButton mnemonicParsing="false" onMouseClicked="#AdminLogin" prefWidth="180.0" ripplerFill="#bfbcbc" style="-fx-background-color: #ff3d4d; -fx-background-radius: 100px; -fx-text-fill: Black; -fx-font-weight: Bold; -fx-font-family: Quicksand;" text="Sign In as Admin" />
+                                       </children>
+                                    </VBox>
+                                 </children>
+                              </VBox>
                                     </children>
                                 </HBox>
                             </children>
