--- a/src/app/view/Main.fxml
+++ b/src/app/view/Main.fxml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXDatePicker?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane onMouseDragged="#dragged" onMousePressed="#pressed" prefHeight="750.0" prefWidth="720.0" style="-fx-background-color: f1c40f;" stylesheets="@../style.css" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.controller.MainController">
+<AnchorPane onMouseDragged="#dragged" onMousePressed="#pressed" prefHeight="759.0" prefWidth="726.0" style="-fx-background-color: f1c40f;" stylesheets="@../style.css" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.controller.MainController">
     <children>
         <StackPane prefHeight="300.0" prefWidth="200.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
             <effect>
@@ -28,6 +28,11 @@
 
 
                                 <fx:include source="title_bar.fxml" />
+                        <VBox alignment="CENTER" prefHeight="66.0" prefWidth="700.0">
+                           <children>
+                              <Text fx:id="DInterpText" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Quicksand; -fx-font-size: 23;" text="INTERPRET ABG DATA" />
+                           </children>
+                        </VBox>
                         <VBox prefHeight="400.0" prefWidth="100.0">
                            <children>
                               <HBox prefHeight="33.0" prefWidth="700.0">
@@ -82,10 +87,11 @@
                                           <Insets left="10.0" right="15.0" top="12.0" />
                                        </HBox.margin>
                                     </Text>
-                                    <DatePicker fx:id="bdayField" promptText="mm / dd / yyyy">
+                                    <JFXDatePicker fx:id="birthField" defaultColor="#f1c40f" promptText="mm / dd / yyyy">
                                        <HBox.margin>
                                           <Insets top="8.0" />
-                                       </HBox.margin></DatePicker>
+                                       </HBox.margin>
+                                    </JFXDatePicker>
                                  </children>
                               </HBox>
                               <HBox prefHeight="100.0" prefWidth="200.0">
