--- a/src/app/view/ViewPatient.fxml
+++ b/src/app/view/ViewPatient.fxml
@@ -1,17 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXRadioButton?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="500.0" maxWidth="958.0" onMouseDragged="#dragged" onMousePressed="#pressed" prefHeight="500.0" prefWidth="922.0" style="-fx-background-color: f1c40f;" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.controller.TableController">
+<AnchorPane maxHeight="513.0" maxWidth="958.0" onMouseDragged="#dragged" onMousePressed="#pressed" prefHeight="513.0" prefWidth="932.0" style="-fx-background-color: f1c40f;" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.controller.TableController">
     <children>
         <StackPane AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
             <effect>
@@ -27,13 +30,18 @@
 
 
                                 <fx:include source="title_bar.fxml" />
+                        <VBox alignment="CENTER" prefHeight="48.0" prefWidth="902.0">
+                           <children>
+                              <Text fx:id="DInterpText" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Quicksand; -fx-font-size: 23;" text="VIEW PATIENT DATA" />
+                           </children>
+                        </VBox>
                         <VBox prefHeight="36.0" prefWidth="700.0">
                            <children>
                               <HBox>
                                  <children>
                                     <HBox prefHeight="100.0" prefWidth="300.0">
                                        <children>
-                                          <JFXTextField fx:id="searchField" onKeyReleased="#Filter" prefHeight="25.0" prefWidth="303.0" promptText="Search" style="-fx-font-family: Quicksand;">
+                                          <JFXTextField fx:id="searchField" onKeyReleased="#Filter" prefHeight="25.0" prefWidth="303.0" promptText="Search Patient" style="-fx-font-family: Quicksand;">
                                              <HBox.margin>
                                                 <Insets bottom="10.0" left="10.0" />
                                              </HBox.margin></JFXTextField>
@@ -42,6 +50,29 @@
                                           <Insets />
                                        </HBox.margin>
                                     </HBox>
+                                    <JFXRadioButton fx:id="rbLname" mnemonicParsing="false" selected="true" text="Patient Last Name">
+                                       <HBox.margin>
+                                          <Insets left="5.0" top="10.0" />
+                                       </HBox.margin>
+                                       <toggleGroup>
+                                          <ToggleGroup fx:id="searchF" />
+                                       </toggleGroup>
+                                    </JFXRadioButton>
+                                    <JFXRadioButton fx:id="rbFname" layoutX="310.0" layoutY="10.0" mnemonicParsing="false" text="Patient First Name" toggleGroup="$searchF">
+                                       <HBox.margin>
+                                          <Insets left="5.0" top="10.0" />
+                                       </HBox.margin>
+                                    </JFXRadioButton>
+                                    <JFXRadioButton fx:id="rbDate" layoutX="310.0" layoutY="10.0" mnemonicParsing="false" text="Date" toggleGroup="$searchF">
+                                       <HBox.margin>
+                                          <Insets left="5.0" top="10.0" />
+                                       </HBox.margin>
+                                    </JFXRadioButton>
+                                    <JFXRadioButton fx:id="rbInter" layoutX="444.0" layoutY="20.0" mnemonicParsing="false" text="Interpreter" toggleGroup="$searchF">
+                                       <HBox.margin>
+                                          <Insets left="5.0" top="10.0" />
+                                       </HBox.margin>
+                                    </JFXRadioButton>
                                  </children>
                               </HBox>
                            </children>
