--- a/src/app/view/title_bar.fxml
+++ b/src/app/view/title_bar.fxml
@@ -14,7 +14,7 @@
                 <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
             </HBox.margin>
         </FontAwesomeIconView>
-        <FontAwesomeIconView fill="#26de81" glyphName="CLONE" onMouseClicked="#max">
+        <FontAwesomeIconView disable="true" fill="#26de81" glyphName="CLONE" onMouseClicked="#max" visible="false">
             <HBox.margin>
                 <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
             </HBox.margin>
