--- a/src/app/view/Home.fxml
+++ b/src/app/view/Home.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.Image?>
@@ -11,9 +12,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="anchorRoot" onMouseEntered="#updateHome" prefHeight="515.0" prefWidth="861.0" style="-fx-background-color: transparent;" stylesheets="@../style.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.controller.HomeController">
+<AnchorPane fx:id="anchorRoot" onMouseEntered="#updateHome" prefHeight="515.0" prefWidth="861.0" style="-fx-background-color: transparent;" stylesheets="@../style.css" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.controller.HomeController">
     <children>
-      <ImageView fitHeight="581.0" fitWidth="864.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="534.0" fitWidth="864.0" pickOnBounds="true">
          <image>
             <Image url="@../assets/bghome.jpg" />
          </image>
@@ -106,8 +107,14 @@
                                                                   <Button alignment="CENTER" mnemonicParsing="false" onMouseClicked="#changePW" prefHeight="23.0" prefWidth="133.0" style="-fx-background-color: #ff3b49; -fx-background-radius: 100PX; -fx-text-fill: white; -fx-font-family: Quicksand;" text="Change Password">
                                                                      <HBox.margin>
                                                                         <Insets right="7.0" />
-                                                                     </HBox.margin></Button>
-                                                                  <Button fx:id="logout_button" alignment="CENTER" mnemonicParsing="false" onMouseClicked="#logout" prefHeight="23.0" prefWidth="112.0" style="-fx-background-color: #ff3b49; -fx-background-radius: 100PX; -fx-text-fill: white; -fx-font-family: Quicksand;" text="Logout" />
+                                                                     </HBox.margin>
+                                                                     <cursor>
+                                                                        <Cursor fx:constant="HAND" />
+                                                                     </cursor></Button>
+                                                                  <Button fx:id="logout_button" alignment="CENTER" mnemonicParsing="false" onMouseClicked="#logout" prefHeight="23.0" prefWidth="112.0" style="-fx-background-color: #ff3b49; -fx-background-radius: 100PX; -fx-text-fill: white; -fx-font-family: Quicksand;" text="Logout">
+                                                                     <cursor>
+                                                                        <Cursor fx:constant="HAND" />
+                                                                     </cursor></Button>
                                                                </children>
                                                             </HBox>
                                                          </children>
@@ -157,6 +164,9 @@
                                  <image>
                                     <Image url="@../assets/Interpret.jpg" />
                                  </image>
+                                 <cursor>
+                                    <Cursor fx:constant="HAND" />
+                                 </cursor>
                               </ImageView>
                            </children>
                            <HBox.margin>
@@ -173,6 +183,9 @@
                                  <image>
                                     <Image url="@../assets/viewPatient.jpg" />
                                  </image>
+                                 <cursor>
+                                    <Cursor fx:constant="HAND" />
+                                 </cursor>
                               </ImageView>
                            </children>
                         </VBox>
@@ -184,6 +197,9 @@
                            <image>
                               <Image url="@../assets/Update2.jpg" />
                            </image>
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
                         </ImageView>
                      </children>
                   </HBox>
@@ -193,6 +209,9 @@
                            <image>
                               <Image url="@../assets/Algo.jpg" />
                            </image>
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
                         </ImageView>
                      </children>
                   </HBox>
