--- a/src/app/view/Result.fxml
+++ b/src/app/view/Result.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.embed.swing.SwingNode?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextArea?>
@@ -10,7 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane onMouseDragged="#dragged" onMouseEntered="#updateResult" onMousePressed="#pressed" prefHeight="750.0" prefWidth="720.0" style="-fx-background-color: f1c40f;" stylesheets="@../style.css" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.controller.ResultController">
+<AnchorPane onMouseDragged="#dragged" onMouseEntered="#updateResult" onMousePressed="#pressed" prefHeight="750.0" prefWidth="736.0" style="-fx-background-color: f1c40f;" stylesheets="@../style.css" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.controller.ResultController">
     <children>
         <StackPane prefHeight="300.0" prefWidth="200.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
             <effect>
@@ -71,10 +72,11 @@
                                                 </HBox>
                                                 <HBox prefHeight="524.0" prefWidth="655.0">
                                                    <children>
-                                                      <TextArea fx:id="UserComment" prefHeight="524.0" prefWidth="658.0" style="-fx-font-family: Quicksand; -fx-font-size: 15;">
+                                                      <TextArea fx:id="UserComment" prefHeight="521.0" prefWidth="686.0" style="-fx-font-family: Quicksand; -fx-font-size: 15;">
                                                          <HBox.margin>
                                                             <Insets left="10.0" />
                                                          </HBox.margin></TextArea>
+                                                      <SwingNode />
                                                    </children>
                                                    <VBox.margin>
                                                       <Insets left="5.0" />
@@ -102,6 +104,9 @@
                                  <HBox.margin>
                                     <Insets left="10.0" />
                                  </HBox.margin>
+                                 <children>
+                                    <Button mnemonicParsing="false" onMouseClicked="#printResult" prefWidth="180.0" style="-fx-background-color: #7caeff; -fx-background-radius: 100PX; -fx-text-fill: white;" text="Print" />
+                                 </children>
                               </VBox>
                            </children>
                         </HBox>
