--- a/src/app/view/ViewPatient.fxml
+++ b/src/app/view/ViewPatient.fxml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXRadioButton?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -50,7 +52,7 @@
                                           <Insets />
                                        </HBox.margin>
                                     </HBox>
-                                    <JFXRadioButton fx:id="rbLname" mnemonicParsing="false" selected="true" text="Patient Last Name">
+                                    <JFXRadioButton fx:id="rbLname" mnemonicParsing="false" text="Patient Last Name">
                                        <HBox.margin>
                                           <Insets left="5.0" top="10.0" />
                                        </HBox.margin>
@@ -100,13 +102,27 @@
                                  <HBox.margin>
                                     <Insets left="10.0" />
                                  </HBox.margin>
+                                 <cursor>
+                                    <Cursor fx:constant="HAND" />
+                                 </cursor>
                               </Button>
                               <HBox prefHeight="32.0" prefWidth="139.0">
                                  <children>
+                                    <JFXButton fx:id="exportXL" mnemonicParsing="false" onMouseClicked="#exportPage" prefHeight="25.0" prefWidth="108.0" style="-fx-background-color: #fe4451; -fx-background-radius: 100px; -fx-text-fill: white;" text="Export">
+                                       <HBox.margin>
+                                          <Insets left="20.0" right="5.0" />
+                                       </HBox.margin></JFXButton>
+                                 </children>
+                              </HBox>
+                              <HBox layoutX="783.0" layoutY="10.0" prefHeight="29.0" prefWidth="125.0">
+                                 <children>
                                     <Button mnemonicParsing="false" onMouseClicked="#editPage" prefWidth="100.0" style="-fx-background-color: #fe4451; -fx-background-radius: 100px; -fx-text-fill: white;" text="Edit">
                                        <HBox.margin>
-                                          <Insets left="20.0" />
+                                          <Insets left="5.0" />
                                        </HBox.margin>
+                                       <cursor>
+                                          <Cursor fx:constant="HAND" />
+                                       </cursor>
                                     </Button>
                                  </children>
                               </HBox>
