--- a/src/app/view/AdminHome.fxml
+++ b/src/app/view/AdminHome.fxml
@@ -72,7 +72,10 @@
                                                       <VBox prefHeight="200.0" prefWidth="100.0" />
                                                       <VBox alignment="TOP_RIGHT" prefHeight="200.0" prefWidth="100.0">
                                                          <children>
-                                                            <Button fx:id="logout_button" alignment="CENTER" mnemonicParsing="false" onMouseClicked="#logout" prefWidth="100.0" style="-fx-background-color: #ff3b49; -fx-background-radius: 100PX; -fx-text-fill: white; -fx-font-family: Quicksand;" text="Logout" />
+                                                            <Button fx:id="logout_button" alignment="CENTER" mnemonicParsing="false" onMouseClicked="#logout" prefWidth="100.0" style="-fx-background-color: #ff3b49; -fx-background-radius: 100PX; -fx-text-fill: white; -fx-font-family: Quicksand;" text="Logout">
+                                                               <cursor>
+                                                                  <Cursor fx:constant="HAND" />
+                                                               </cursor></Button>
                                                          </children>
                                                          <VBox.margin>
                                                             <Insets right="10.0" />
