--- a/src/app/view/Result.fxml
+++ b/src/app/view/Result.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.embed.swing.SwingNode?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.effect.DropShadow?>
@@ -11,9 +12,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane onMouseDragged="#dragged" onMouseEntered="#updateResult" onMousePressed="#pressed" prefHeight="750.0" prefWidth="736.0" style="-fx-background-color: f1c40f;" stylesheets="@../style.css" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.controller.ResultController">
+<AnchorPane onMouseDragged="#dragged" onMouseEntered="#updateResult" onMousePressed="#pressed" prefHeight="725.0" prefWidth="768.0" style="-fx-background-color: f1c40f;" stylesheets="@../style.css" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.controller.ResultController">
     <children>
-        <StackPane prefHeight="300.0" prefWidth="200.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
+        <StackPane prefHeight="705.0" prefWidth="752.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
             <effect>
                 <DropShadow />
             </effect>
@@ -29,7 +30,7 @@
                                 <fx:include source="title_bar.fxml" />
                         <HBox prefHeight="582.0" prefWidth="700.0">
                            <children>
-                              <VBox prefHeight="445.0" prefWidth="700.0">
+                              <VBox prefHeight="566.0" prefWidth="748.0">
                                  <children>
                                     <HBox prefHeight="573.0" prefWidth="700.0">
                                        <children>
@@ -72,7 +73,7 @@
                                                 </HBox>
                                                 <HBox prefHeight="524.0" prefWidth="655.0">
                                                    <children>
-                                                      <TextArea fx:id="UserComment" prefHeight="521.0" prefWidth="686.0" style="-fx-font-family: Quicksand; -fx-font-size: 15;">
+                                                      <TextArea fx:id="UserComment" editable="false" wrapText="true" prefHeight="515.0" prefWidth="715.0" style="-fx-font-family: Quicksand; -fx-font-size: 15;">
                                                          <HBox.margin>
                                                             <Insets left="10.0" />
                                                          </HBox.margin></TextArea>
@@ -94,7 +95,10 @@
                            <children>
                               <VBox alignment="CENTER" prefHeight="86.0" prefWidth="186.0">
                                  <children>
-                                    <Button fx:id="submitButton" mnemonicParsing="false" onMouseClicked="#Doneinterp" prefWidth="180.0" style="-fx-background-color: #7caeff; -fx-background-radius: 100PX; -fx-text-fill: white;" text="Submit" />
+                                    <Button fx:id="submitButton" mnemonicParsing="false" onMouseClicked="#Doneinterp" prefWidth="180.0" style="-fx-background-color: #7caeff; -fx-background-radius: 100PX; -fx-text-fill: white;" text="Submit">
+                                       <cursor>
+                                          <Cursor fx:constant="HAND" />
+                                       </cursor></Button>
                                  </children>
                                  <HBox.margin>
                                     <Insets left="10.0" />
@@ -105,7 +109,10 @@
                                     <Insets left="10.0" />
                                  </HBox.margin>
                                  <children>
-                                    <Button mnemonicParsing="false" onMouseClicked="#printResult" prefWidth="180.0" style="-fx-background-color: #7caeff; -fx-background-radius: 100PX; -fx-text-fill: white;" text="Print" />
+                                    <Button mnemonicParsing="false" onMouseClicked="#printResult" prefWidth="180.0" style="-fx-background-color: #7caeff; -fx-background-radius: 100PX; -fx-text-fill: white;" text="Print">
+                                       <cursor>
+                                          <Cursor fx:constant="HAND" />
+                                       </cursor></Button>
                                  </children>
                               </VBox>
                            </children>
